# spiff

./: Cargo.toml  README.md
diff_viz/: Cargo.toml
diff_viz/src/: main.rs
libdiff/: Cargo.toml
libdiff/src/: lib.rs
spiff/: Cargo.toml
spiff/src/: lib.rs  main.rs  widget.rs
